--- a/html/packages/chrome/templates/header.html
+++ b/html/packages/chrome/templates/header.html
@@ -1,21 +1,42 @@
-<div class="navbar">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-            </a>
-            {{#branding}}
-            <a class="brand" href="/">
-                <img src="{{src}}" width="30" height="30" alt="{{alt}}" />
-            </a>
-            {{/branding}}
-            <div class="nav-collapse">
-                <ul class="nav">
+
+<div class="row-fluid">
+    <div class="logo">
+    {{#branding}}
+    <a class="brand" href="/">
+        <img src="{{src}}" width="30" height="30" alt="{{alt}}" />
+    </a>
+    {{/branding}}
+    </div>
+
+    <div class="searchform">
+    {{#search}}
+    <form action="/" method="post" class="form-inline">
+        <input class="input-search" name="s" placeholder="{{placeholder}}"/>    
+    </form>
+    {{/search}}
+    </div>
+
+    <div class="account clearfix">
+        {{#authorized}}
+            <div class="photo"><img src="{{user_photo}}" alt="{{user_name}}"/></div>
+            <div class="userlinks dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{user_name}} <b class="caret"></b></a>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                     {{#nav}}
-                    <li><a href="{{link}}">{{page}}</a></li>
+                        <li><a href="{{link}}">{{page}}</a></li>
                     {{/nav}}
+                    <li><a href="{{logout_url}}">{{logout_label}}</a></li>
                 </ul>
             </div>
-        </div>
+        {{/authorized}}    
+        {{^authorized}}
+            <a href="{{login_url}}">{{login_label}}</a>
+        {{/authorized}}    
     </div>
 </div>
+
+{{^authorized}}
+<div class="row-fluid textright">
+    {{signup_social_label}} <a href="{{signup_facebook_link}}" class="signup-facebook">{{signup_facebook_label}}</a> <a href="{{signup_email_link}}" class="signup-email">{{signup_email_label}}</a>
+</div>
+{{/authorized}}
