added view (user profile -header)

--- a/html/packages/chrome/templates/header.html
+++ b/html/packages/chrome/templates/header.html
@@ -20,7 +20,7 @@
         {{#authorized}}
             <div class="photo"><img src="{{user_photo}}" alt="{{user_name}}"/></div>
             <div class="userlinks dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{user_name}} <b class="caret"></b></a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="/">{{user_name}} <b class="caret"></b></a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                     {{#nav}}
                         <li><a href="{{link}}">{{page}}</a></li>
