--- a/html/css/app.css
+++ b/html/css/app.css
@@ -8,14 +8,17 @@
 .textright { text-align:right; }
 .textcenter { text-align:center; }
 
-header { border-bottom:1px solid #ccc; padding-top:10px; padding-bottom:10px; background:#740000; }
-header .logo { float:left; margin:6px 15px 6px 0; }
-header .searchform { float:left; margin:15px 15px 6px 0; }
+header { border-bottom:1px solid #ccc; padding-top:10px; padding-bottom:10px; }
+header .logo { float:left; margin:6px 0; }
+header .searchform { float:left; margin:6px 15px; }
 header .searchform form { margin-bottom:0; }
-header .account { float:right; margin:10px; }
+header .account { float:right; }
 header .photo { float:left; margin-right:10px; }
 header .userlinks { float:left; margin-top:5px; }
-header .userlinks .dropdown-toggle { min-width:200px; color:#fff; font-weight:bold; }
+header .userlinks .dropdown-toggle { min-width:200px; font-weight:bold; }
 header .userlinks .dropdown-menu { left:auto; right:0; top:25px; }
 header .signup-facebook,
 header .signup-email { margin:0 5px; }
+
+#main { padding-top:15px; padding-bottom:15px; }
+#main .sports-info { margin-top:20px; }
