--- a/html/packages/profile/templates/layout.html
+++ b/html/packages/profile/templates/layout.html
@@ -1,15 +1,24 @@
 
 <div id="profile-header">
-Profile Header
+
 </div>
 
 <div class="row-fluid">
     <div class="span4" id="profile-sidebar">
-        Profile Sidebar
+        <div class="org-wrap">
+            
+        </div>
+        <div class="related-wrap">
+            
+        </div>
     </div>
     <div class="span8" id="profile-content">
-        Profile Content
+        <div class="video-wrap">
+        
+        </div>
     </div>
 </div>
 
-<div id="profile-footer"></div>
+<div id="profile-footer">
+
+</div>
