Added more to tables for api stuff and incorporated it into the api display.

--- a/application/templates/api.mustache
+++ b/application/templates/api.mustache
@@ -1,6 +1,6 @@
 <li id="{{ent_id}}" class="apientry"><a name="{{ent_id}}"></a>
-	<div style="width:100%" class="api_basics">
-		<div style="display:block; margin-right:50px; float:left;">
+	<div class="api_basics">
+		<div style="display:block; float:left;">
 			<span>Entity Type:</span><br/>
 			<span>Primary Class:</span>
 		</div>
@@ -8,7 +8,9 @@
 			<span class="enttype"> <span class="val">{{entity_type}}</span> </span><br/>
 			<span class="classname"><span class="val">{{primary_class}}</span></span>
 		</div>
+
 	</div>
+	<span class="description">{{desc}}</span>
 	{{#method}}
 	<ul class="methods">
 
