--- a/application/templates/docs.mustache
+++ b/application/templates/docs.mustache
@@ -42,19 +42,38 @@
 		}
 		li.apientry{
 			margin:5px;
+			margin-top: 25px;
+			background-color: #EFEFEF;
 			padding:10px;
-			border: 1px solid #EFEFEF;
+			border: 1px solid #999;
 			-webkit-border-radius: 10px;
 			border-radius: 10px;
 			-webkit-box-shadow: 1px 1px 1px 1px rgba(90, 90, 90, .5);
 			box-shadow: 1px 1px 1px 1px rgba(90, 90, 90, .5);
 		}
-		li.apientry:hover{ background-color: rgba(234, 234, 234, 0.29);}
+		li.apientry:hover{ background-color: rgba(234, 234, 234, 0.42);}
+
+		div.api_basics {
+			-webkit-border-radius: 10px;
+			border-radius: 10px;
+			border-bottom: 1px solid #ffedf6;
+			background-color: rgba(135, 255, 134, 0.31);
+			padding: 8px;
+			width:98%;
+		}
 		div.api_basics div span{
-			font-size: 16px;
+			font-size: 18px;
+			marging-right:10px;
+		}
+		li.apientry span.description{
+
+			display: inline-block;
+			padding: 10px;
+
+
 		}
 
-		span.val{ font-weight: bold; font-size: 16px; }
+		span.val{ font-weight: bold; font-size: 18px; }
 
 		.methods{
 			-webkit-box-shadow: inset 1px 1px 1px rgba(90, 90, 90, .1);
@@ -77,7 +96,7 @@
 <body>
 <ul>
 	{{#index}}
-		<li>- <a href="#{{id}}">{{name}}</a></li>
+		<li>- <a href="#{{id}}"><b>{{name}}</b> ({{api}})</a></li>
 	{{/index}}
 </ul>
 <ul>
