added images,primary video, comments-USER Profile

--- a/html/packages/profile/templates/layout.html
+++ b/html/packages/profile/templates/layout.html
@@ -5,17 +5,28 @@
 
 <div class="row-fluid">
     <div class="span4" id="profile-sidebar">
-        <div class="org-wrap">
-            
+        
+        <div id="org-wrap" class="clearfix">
         </div>
-        <div class="related-wrap">
-            
+        
+        <div id="related-wrap" class="clearfix">
         </div>
+    
     </div>
     <div class="span8" id="profile-content">
-        <div class="video-wrap">
         
+        <div id="video-wrap" class="clearfix">
         </div>
+        
+        <div id="image-wrap" class="clearfix">
+        </div>
+        
+        <div id="profile-primaryvideo" class="clearfix">
+        </div>
+        
+        <div id="comment-wrap" class="clearfix">
+        </div>
+        
     </div>
 </div>
 
