--- a/html/css/app.css
+++ b/html/css/app.css
@@ -22,3 +22,4 @@ header .signup-email { margin:0 5px; }
 
 #main { padding-top:15px; padding-bottom:15px; }
 #main .sports-info { margin-top:20px; }
+#main .profile-image { float:left; }
