--- a/html/packages/profile/templates/layout.html
+++ b/html/packages/profile/templates/layout.html
@@ -9,7 +9,10 @@
         <div id="org-wrap" class="clearfix">
         </div>
         
-        <div id="related-wrap" class="clearfix">
+        <div id="related-wrap" class="clearfix">        
+        </div>
+        
+        <div id="fitnessbasic-wrap" class="clearfix">
         </div>
     
     </div>
