fix htaccess issue

--- a/html/packages/profile/templates/sport-item.html
+++ b/html/packages/profile/templates/sport-item.html
@@ -7,10 +7,10 @@
     {{#teams}}
         {{team_name}}, {{team_location}} <br/>
     {{/teams}}
-    <div class="span3 position">
+    <div class="position">
     Primary Position: {{primary_position}}
     </div>
-    <div class="span4 social-links">
+    <div class="social-links">
     {{#social_links}}
         <a class="{{class}}" href="{{link}}" title="{{title}}">{{title}}</a>
     {{/social_links}}
