--- a/html/packages/profile/templates/header.html
+++ b/html/packages/profile/templates/header.html
@@ -3,7 +3,7 @@
 <div class="row-fluid">
     <div class="span4 textcenter">
         {{#user_picture}}
-        <img src="{{user_picture}}" alt="{{user_name}}" />
+        <img src="{{base_url}}{{user_picture}}" alt="{{user_name}}" />
         {{/user_picture}}
     </div>
     <div class="span8">
