--- a/html/packages/profile/templates/primaryvideo.html
+++ b/html/packages/profile/templates/primaryvideo.html
@@ -2,7 +2,7 @@
 {{#payload}}
     <strong>Introduction</strong>
     <p>{{video_desc}}</p>
-    <div class="textcenter"><img src="{{video_image}}" alt="{{video_title}}"/></div>
+    <div class="textcenter"><img src="{{base_url}}{{video_image}}" alt="{{video_title}}"/></div>
     <h3>{{video_title}}</h3>
     {{#team}} 
         {{org_name}} - {{complevel}} - {{season}} - {{year}} <br/>
