--- a/html/packages/profile/templates/comment-form.html
+++ b/html/packages/profile/templates/comment-form.html
@@ -2,7 +2,7 @@
 {{#payload}}
 <form>
 <div class="row-fluid">
-    <img src="{{comment_author_picture}}" alt="{{comment_author}}" style="float:left;"/>
+    <img src="{{base_url}}{{comment_author_picture}}" alt="{{comment_author}}" style="float:left;"/>
     {{comment_author}}<br/>
     <textarea cols="100" rows="5" id="new-comment" placeholder="{{comment_placeholder}}"></textarea>    
     <input type="button" id="comment-submit" value="Submit"/>
