--- a/html/packages/profile/templates/comment-item.html
+++ b/html/packages/profile/templates/comment-item.html
@@ -1,7 +1,7 @@
 
 {{#payload}}
 <div class="row-fluid">
-    <img src="{{comment_author_picture}}" alt="{{comment_author}}" style="float:left;"/>
+    <img src="{{base_url}}{{comment_author_picture}}" alt="{{comment_author}}" style="float:left;"/>
     {{comment_author}} {{comment_date}}<br/>
     <p>{{comment}}</p>
 </div>
