--- a/html/packages/profile/templates/image-item.html
+++ b/html/packages/profile/templates/image-item.html
@@ -1,6 +1,6 @@
 
 {{#payload}}
-<img src="{{image_path}}" alt="{{image_path}}"/><br/>
+<img src="{{base_url}}{{image_path}}" alt="{{image_path}}"/><br/>
 {{num_votes}} Votes
 {{/payload}}
 
