--- a/html/packages/profile/templates/related-item.html
+++ b/html/packages/profile/templates/related-item.html
@@ -2,7 +2,7 @@
 {{#payload}}
 <div class="row-fluid">
     <div class="span6">
-        <img src="{{user_picture}}" alt="{{user_name}}"/>
+        <img src="{{base_url}}{{user_picture}}" alt="{{user_name}}"/>
     </div>
     <div class="span6">
         <div class="username">{{user_name}}</div>
