added document of data structure and clarify html File Structure and added commentsof, commenson

--- a/html/packages/profile/templates/layout.html
+++ b/html/packages/profile/templates/layout.html
@@ -27,7 +27,10 @@
         <div id="profile-primaryvideo" class="clearfix">
         </div>
         
-        <div id="comment-wrap" class="clearfix">
+        <div id="commentof-wrap" class="clearfix">
+        </div>
+        
+        <div id="commenton-wrap" class="clearfix">
         </div>
         
     </div>
