added the models(#48~50) and changed a diagram("data_structure.xlsx).

--- a/html/pages/profile/templates/commentof-item.html
+++ b/html/pages/profile/templates/commentof-item.html
@@ -1,8 +1,8 @@
 
 {{#payload}}
 <div class="row-fluid">
-    <img src="{{base_url}}{{comment_author_picture}}" alt="{{comment_author}}" style="float:left;"/>
-    {{comment_author}} {{comment_date}}<br/>
+    <img src="{{base_url}}{{poster_picture}}" alt="{{poster}}" style="float:left;"/>
+    {{poster}} {{date}}<br/>
     <p>{{comment}}</p>
 </div>
 {{/payload}}
