--- a/html/pages/profile/templates/commenton-form.html
+++ b/html/pages/profile/templates/commenton-form.html
@@ -2,8 +2,8 @@
 {{#payload}}
 <form>
 <div class="row-fluid">
-    <img src="{{base_url}}{{comment_author_picture}}" alt="{{comment_author}}" style="float:left;"/>
-    {{comment_author}}<br/>
+    <img src="{{base_url}}{{poster_picture}}" alt="{{poster}}" style="float:left;"/>
+    {{poster}}<br/>
     <textarea cols="100" rows="5" id="new-comment" placeholder="{{comment_placeholder}}"></textarea>    
     <input type="button" id="comment-submit" value="Submit"/>
 </div>
