--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -8,7 +8,7 @@
     </div>
     <div class="span8">
         <div>
-            <h3 class="username">{{user_name}}</h3>
+            <h3 class="username">{{user_name}} '{{grad_year}}</h3>
             <div class="running">Running Back <span class="userheight">{{user_height}}</span> <span class="userweight">{{user_weight}}</span> </div>
             <div class="votes">Votes: {{num_votes}}</div>
             <div class="followers">Followers: {{num_followers}}</div>
