add models(#51~#57) and updated a diagram

--- a/html/pages/profile/templates/layout.html
+++ b/html/pages/profile/templates/layout.html
@@ -5,6 +5,9 @@
 
 <div class="row-fluid">
     <div class="span4" id="profile-sidebar">
+    
+        <div id="add-media" class="clearfix">
+        </div>
         
         <div id="org-wrap" class="clearfix">
         </div>
