Updates to database, updates to er diagram, admin panel work too

--- a/modules/admin/templates/admin/entlist.mustache
+++ b/modules/admin/templates/admin/entlist.mustache
@@ -23,7 +23,7 @@
 							<td></td>
 							<td>{{name}}</td>
 							<td><div style="white-space: nowrap;	overflow: hidden;text-overflow: ellipsis; width:400px;">{{desc}}</div></td>
-							<td onclick="loadContent('/admin/show_postparams',{'entID':{{id}}});"></td>
+							<td><div onclick="loadContent('/admin/show_postparams',{'entID':{{id}}});">POST</div></td>
 						</tr>
 					{{/ents}}
 				</table>
