Taking out construct methods

--- a/modules/admin/templates/admin/entpost.mustache
+++ b/modules/admin/templates/admin/entpost.mustache
@@ -29,7 +29,7 @@
 
 			{{/hasparams}}
 			{{#params}}
-			<span class="paramname">{{name}} ({{type}})</span><span class="description">{{desc}}</span><br />
+			<span class="paramname">{{name}} ({{type}})</span> - <span class="description">{{desc}}</span><br />
 			{{#hasobjs}}
 				<select  name="{{name}}" id="{{name}}">
 					<option value="0">No Value</option>
