Add Game Page Header and Rosters(#153, #159, #164, #166)

--- a/html/pages/game/templates/layout.html
+++ b/html/pages/game/templates/layout.html
@@ -9,13 +9,7 @@
         <div id="add-media" class="clearfix">
         </div>
         
-        <div id="org-wrap" class="clearfix">
-        </div>
-        
-        <div id="related-wrap" class="clearfix">        
-        </div>
-        
-        <div id="fitnessbasic-wrap" class="clearfix">
+        <div id="roster-wrap" class="clearfix">
         </div>
     
     </div>
@@ -27,7 +21,7 @@
         <div id="image-wrap" class="clearfix">
         </div>
         
-        <div id="profile-primaryvideo" class="clearfix">
+        <div id="primaryvideo" class="clearfix">
         </div>
         
         <div id="commentof-wrap" class="clearfix">
