--- a/html/pages/profile/templates/layout.html
+++ b/html/pages/profile/templates/layout.html
@@ -1,10 +1,10 @@
 
-<div id="profile-header">
+<div id="main-header">
 
 </div>
 
 <div class="row-fluid">
-    <div class="span4" id="profile-sidebar">
+    <div class="span4" id="main-sidebar">
     
         <div id="add-media" class="clearfix">
         </div>
@@ -19,7 +19,7 @@
         </div>
     
     </div>
-    <div class="span8" id="profile-content">
+    <div class="span8" id="main-content">
         
         <div id="video-wrap" class="clearfix">
         </div>
@@ -39,6 +39,6 @@
     </div>
 </div>
 
-<div id="profile-footer">
+<div id="main-footer">
 
 </div>
