Game Page - Video Thumbs, Image Grid, Fan Board

--- a/html/pages/game/templates/layout.html
+++ b/html/pages/game/templates/layout.html
@@ -18,16 +18,13 @@
         <div id="video-player" class="clearfix">
         </div>
         
+        <div id="videothumb-wrap" class="clearfix">
+        </div>
+        
         <div id="image-wrap" class="clearfix">
         </div>
         
-        <div id="primaryvideo" class="clearfix">
-        </div>
-        
-        <div id="commentof-wrap" class="clearfix">
-        </div>
-        
-        <div id="commenton-wrap" class="clearfix">
+        <div id="comment-wrap" class="clearfix">
         </div>
         
     </div>
