--- a/html/pages/team/templates/header.html
+++ b/html/pages/team/templates/header.html
@@ -2,18 +2,24 @@
 {{#payload}}
 <div class="row-fluid">
     <div class="span4 textcenter">
-        {{#user_picture}}
-        <img src="{{base_url}}{{user_picture}}" alt="{{user_name}}" />
-        {{/user_picture}}
+        {{#picture}}
+        <img src="{{base_url}}{{picture}}" alt="{{name}}" />
+        {{/picture}}
     </div>
     <div class="span8">
         <div>
-            <h3 class="username">{{user_name}} '{{grad_year}}</h3>
-            <div class="running">Running Back <span class="userheight">{{user_height}}</span> <span class="userweight">{{user_weight}}</span> </div>
+            <h3 class="teamname">{{name}}</h3>
+            <div class="teamloaction">{{location}}</div>
             <div class="votes">Votes: {{num_votes}}</div>
             <div class="followers">Followers: {{num_followers}}</div>
         </div>
         <div id="sports-info"></div>
     </div>
 </div>
+<form action="#" method="post">
+    <input type="hidden" name="action" value="submit"/>
+    <input type="hidden" name="team" value="{{id}}"/>
+    <input type="submit" name="submit" value="Vote"/>
+    <input type="submit" name="submit" value="Follow"/>
+</form>
 {{/payload}}
