add content buttons and schedule - team page

--- a/html/pages/team/templates/layout.html
+++ b/html/pages/team/templates/layout.html
@@ -9,11 +9,15 @@
         <div id="add-media" class="clearfix">
         </div>
         
-        <div id="org-wrap" class="clearfix">
+        Upcoming<br/>
+        <div id="upcoming-schedule" class="clearfix">
         </div>
         
-        <div id="related-wrap" class="clearfix">        
+        Recent<br/>
+        <div id="recent-schedule" class="clearfix">        
         </div>
+        
+        <a href="#">Missing a Game?</a>
         
         <div id="fitnessbasic-wrap" class="clearfix">
         </div>
