#325 Competitor Teams List - Team Page

--- a/html/pages/team/templates/layout.html
+++ b/html/pages/team/templates/layout.html
@@ -19,7 +19,7 @@
         
         <a href="#">Missing a Game?</a>
         
-        <div id="fitnessbasic-wrap" class="clearfix">
+        <div id="competitor-teams" class="clearfix">
         </div>
     
     </div>
