--- a/html/pages/team/templates/layout.html
+++ b/html/pages/team/templates/layout.html
@@ -24,8 +24,8 @@
     
     </div>
     <div class="span8" id="main-content">
-        
-        <div id="video-wrap" class="clearfix">
+        Roster
+        <div id="roster-wrap" class="clearfix">
         </div>
         
         <div id="image-wrap" class="clearfix">
