#328 Videos(Video list + Video Player) - Team Page

--- a/html/packages/media/templates/videoplayer.html
+++ b/html/packages/media/templates/videoplayer.html
@@ -1,6 +1,6 @@
 
 {{#payload}}
-    <div class="textcenter"><img src="{{base_url}}{{video_image}}" alt="{{video_title}}"/></div>
+    <div class="textcenter"><img src="{{base_url}}{{video_src}}" alt="{{video_title}}"/></div>
     <h3>{{video_title}}</h3>
     {{#games}} 
         {{team1_name}} vs {{team2_name}}
