--- a/html/pages/team/templates/layout.html
+++ b/html/pages/team/templates/layout.html
@@ -28,7 +28,8 @@
         <div id="roster-wrap" class="clearfix">
         </div>
         
-        <div id="image-wrap" class="clearfix">
+        Video
+        <div id="video-wrap" class="clearfix">
         </div>
         
         <div id="profile-primaryvideo" class="clearfix">
