--- a/html/packages/media/templates/video-item.html
+++ b/html/packages/media/templates/video-item.html
@@ -1,6 +1,7 @@
-
-{{#payload}}
-<div class="row-fluid">
+<input type="hidden" class="id" value="{{id}}"/>
+{{#payload}}    
+    <img src="{{base_url}}{{video_thumb}}" alt="{{video_title}}"/>
+<div class="row-fluid" style="display:none;">
     <div class="span6">
         <img src="{{base_url}}{{video_thumb}}" alt="{{video_title}}"/>
     </div>
