--- a/html/pages/team/templates/layout.html
+++ b/html/pages/team/templates/layout.html
@@ -28,17 +28,16 @@
         <div id="roster-wrap" class="clearfix">
         </div>
         
-        Video
+        Videos
         <div id="video-wrap" class="clearfix">
         </div>
         
-        <div id="profile-primaryvideo" class="clearfix">
+        Photos
+        <div id="image-wrap" class="clearfix">
         </div>
         
-        <div id="commentof-wrap" class="clearfix">
-        </div>
-        
-        <div id="commenton-wrap" class="clearfix">
+        FanBoard
+        <div id="comment-wrap" class="clearfix">
         </div>
         
     </div>
