Reg Step1, Game Page(Video, Image List)
I didn't finished still #392.

--- a/html/pages/game/templates/layout.html
+++ b/html/pages/game/templates/layout.html
@@ -15,10 +15,7 @@
     </div>
     <div class="span8" id="main-content">
         
-        <div id="video-player" class="clearfix">
-        </div>
-        
-        <div id="videothumb-wrap" class="clearfix">
+        <div id="video-wrap" class="clearfix">
         </div>
         
         <div id="image-wrap" class="clearfix">
