--- a/modules/admin/templates/admin/entpost.mustache
+++ b/modules/admin/templates/admin/entpost.mustache
@@ -4,7 +4,7 @@
 <h2>{{desc}}</h2>
 {{#method}}
 <form id="form_{{id}}">
-<ul class="methods" style="margin-bottom: 30px; border: 1px solid #333; padding: 10px; list-style: none;">
+<ul class="methods" style="margin-bottom: 10px; border: 1px solid #333; padding: 10px; list-style: none;">
 
 		<li class="firstmethod"><h1>{{shortname}} ({{api_method}})</h1></li>
 		<li>{{usage}}
@@ -48,6 +48,16 @@
 		{{/hasparams}}
 			<input type="submit"></li>
 </ul></form>
+        <ul class="methods" style="margin-bottom: 30px; border: 1px solid #333; padding: 10px; list-style: none;">
+            <li>
+                <div><h2>{{shortname}} ({{api_method}}) Dev Status</h2>
+                    <input type="checkbox" id="chk_{{id}}" onclick="updateComplete({{id}},this.checked);"{{#complete}} checked="checked"{{/complete}} /> <span>Complete</span>
+<br />
+                    <textarea id="{{id}}_currstat" style="width:100%; height: 55px;">{{status}}</textarea><br />
+                    <button id="update_{{id}}" onclick="updateStatus({{id}});">Update Status</button>
+                    </div>
+            </li>
+        </ul><hr /><br />
 <script type="text/javascript">
 	$(document).ready(function(){
 		$('form#form_{{id}}').submit(function(){
@@ -70,6 +80,8 @@
 			});
 			return false;
 		});
+
+
 	});
 </script>
 		{{/method}}
