Working on Admin Testing panel

--- a/modules/admin/templates/admin/index.mustache
+++ b/modules/admin/templates/admin/index.mustache
@@ -63,6 +63,34 @@
                 });
             }
 
+            var loadTest = function(dest,id)
+            {
+                $.getJSON('/api/apitest/testval/'+id,{},function(json){
+                    console.log(json.payload.testval);
+                    console.log(dest);
+                    $(dest).val(json.payload.testval);
+                });
+            }
+
+        var fileTest = function(dest)
+        {
+            $.getJSON($(dest).val(),{},function(json){console.log(json)});
+        }
+
+        var manualTest = function(dest,data,verb)
+        {
+            console.log(dest);
+            $.ajax({
+                url:$(dest).val(),
+                type:verb,
+                data:$(data).val(),
+                success:function(json)
+                {
+                    console.log(json);
+                }
+            })
+        }
+
 	</script>
 </head>
 <body>
