#392 - Use Facebook Image

--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -1,6 +1,6 @@
 
 {{#payload}}
 <img src="{{base_url}}{{image_path}}" alt="{{image_title}}"/><br/>
-{{num_votes}} Votes
+{{#num_votes}}{{num_votes}} Votes{{/num_votes}}
 {{/payload}}
 
