--- a/html/pages/registration/templates/register_facebook.html
+++ b/html/pages/registration/templates/register_facebook.html
@@ -3,7 +3,7 @@
 <h1>Register with Facebook</h1>
 <div class="row-fluid">
     <div class="span4">
-        <img src="{{picture}}" alt="{{name}}"/><br/>
+        <img class="picture" src="{{base_url}}{{picture}}" alt="{{name}}"/><br/>
         <a href="#" class="diff_fb_pic">Different Facebook Pic</a><br/>
         <a href="#" class="upload_new_image">Upload a New Image</a><br/>
     </div>
@@ -44,6 +44,3 @@
     <a href="#" class="next">What's Next</a>
 </div>
 {{/payload}}
-<div id="dialog" title="Basic dialog">
-<p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
-</div>
