--- a/html/packages/media/templates/image-board.html
+++ b/html/packages/media/templates/image-board.html
@@ -1,7 +1,7 @@
 
 {{#payload}}
     <div class="textcenter"><img src="{{base_url}}{{image_path}}" alt="{{image_title}}"/></div>
-    <h3>{{image_title}}</h3>
-    Votes: {{num_votes}} <br/>
+    {{#image_title}}<h3>{{image_title}}</h3>{{/image_title}}
+    {{#num_votes}}Votes: {{num_votes}} <br/>{{/num_votes}}
 {{/payload}}
 
