--- a/html/pages/registration/templates/fbimage-board.html
+++ b/html/pages/registration/templates/fbimage-board.html
@@ -1,13 +1,15 @@
 
 {{#payload}}
-    <div class="textcenter"><img id="image-select" src="{{base_url}}{{image_path}}" alt="{{image_title}}"/></div>
-    <h3>{{image_title}}</h3>
-    Votes: {{num_votes}} <br/>
+    <div class="textcenter pane">
+        <img id="image-select" src="{{base_url}}{{image_path}}" alt="{{image_title}}"/>
+        <div class="coords" style="display:none;">
+            <div>crop x <input name="crop-x" type="hidden" /></div>
+            <div>crop y <input name="crop-y" type="hidden" /></div>
+            <div>crop width <input name="crop-width" type="hidden" /></div>
+            <div>crop height <input name="crop-height" type="hidden" /></div>
+            <div>image width <input name="image-width" type="hidden" /></div>
+            <div>image height <input name="image-height" type="hidden" /></div>
+            <div>lock proportion <input name="lock-proportion" type="checkbox" checked="checked" /></div>
+        </div>
+    </div>
 {{/payload}}
-
-<input type="hidden" name="x1" value="" id="x1" />
-<input type="hidden" name="y1" value="" id="y1" />
-<input type="hidden" name="x2" value="" id="x2" />
-<input type="hidden" name="y2" value="" id="y2" />
-<input type="hidden" name="w" value="" id="w" />
-<input type="hidden" name="h" value="" id="h" />
