--- a/html/pages/registration/templates/select_type.html
+++ b/html/pages/registration/templates/select_type.html
@@ -3,3 +3,4 @@
 <a href="#" class="register_facebook">Sign up through Facebook</a>
 <br/><br/> OR <br/><br/>
 <a href="#" class="register_email">Register With Email Address</a>
+<div id="fb-root"></div>
